Fixed some errors.

--- a/src/content/mainmatter/beispielaufgaben/vorlesung3Loesungen.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung3Loesungen.tex
@@ -27,7 +27,9 @@ Die IP-Adressen werden ebenfalls in eine Binärdarstellung gewandelt:
     \item 139.179.205.180 → 10001011.10110011.11001101.10110100
 \end{enumerate}
 
-Bei scharfem Hinschauen sieht man, dass die ersten 2 Bytes in allen Routing-Einträgen gleich sind, und das die Netzwerkbits immer mindestens 16 Bit lang sind. Daher kann man sich ganz auf das 3. (und ggf. 4) Byte in den Adressen konzentrieren.
+Bei scharfem Hinschauen sieht man, dass die ersten 2 Bytes in allen Routing-Einträgen gleich sind
+und dass die Netzwerkbits immer mindestens 16 Bit lang sind.
+Daher kann man sich ganz auf das 3. (und ggf.\ 4) Byte in den Adressen konzentrieren.
 
 \begin{enumerate}[(a)]
     \item Die ersten 4 Einträge passen alle nicht → R5 wird genommen
