--- a/src/content/mainmatter/vorlesungsfragen/vorlesung1.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung1.tex
@@ -76,9 +76,9 @@
 
 \minisec{Ordnen Sie die Begriffe Paketvermittlung und Leitungsvermittlung zu!}
 \begin{itemize}
-    \item Die \textcolor{blue}{Leitungsvermittlung (circuit switching} stellt zwischen zwei oder mehr Teilnehmern einen Übertragungskanal über mehrere Vermittlungsstellen für die Dauer der Übertragung her.
+    \item Die \textcolor{blue}{Leitungsvermittlung (circuit switching)} stellt zwischen zwei oder mehr Teilnehmern einen Übertragungskanal über mehrere Vermittlungsstellen für die Dauer der Übertragung her.
     Die Leitungsvermittlung eignet sich in der Regel für zeitkritische Anwendungen bzw.\ der Übertragung von Daten in Echtzeit.
-    \item Bei der  \textcolor{blue}{Paketvermittlung (store and forward} werden die Daten oder Informationen in Pakete aufgeteilt.
+    \item Bei der  \textcolor{blue}{Paketvermittlung (store and forward)} werden die Daten oder Informationen in Pakete aufgeteilt.
     Der Dienst bzw.\ die Anwendung übergibt die einzelnen Pakete an das Kommunikationssystem und versieht sie mit der Zieladresse und weiteren Vermittlungsinformationen.
     Das Kommunikationssystem vermittelt die Datenpakete vom Sender zum Empfänger.
     Die Pakete können dabei unterschiedliche Wege zu ihrem Ziel nehmen.
@@ -88,7 +88,7 @@
 
 \minisec{Was versteht man unter dem Store-and-Forward-Verfahren, und wo wird es eingesetzt?}
 \begin{itemize}
-    \item Im Netze findet ein Store-and-Forward statt.
+    \item Im Netz findet ein Store-and-Forward statt.
     An der Grenze zwischen zwei Netzen sorgen Router für die Weiterleitung der Daten.
     Nach dem Empfang findet die Entscheidung über den nächsten Router konzeptionell anhand der Zieladresse statt.
     \item Wird in der Internet-Schicht eingesetzt (entspricht ISO/OSI 3) bei statischen Netzen
@@ -109,12 +109,12 @@
     \item \textcolor{blue}{Knotengrad}
     \begin{itemize}
         \item Anzahl von Verbindungen eines Knotens zu seinen Nachbarn.
-        Ist die Anzahl nicht konstant, so wird der das Maximum aller Knoten genommen
+        Ist die Anzahl nicht konstant, so wird das Maximum aller Knoten genommen.
         \item → Ziel: Möglichst klein, da die Kosten so mit diesem Grad steigen
     \end{itemize}
 \end{itemize}
 
-\minisec{ Welche räumliche Ausdehnung besitzen typischerweise LANs?}
+\minisec{Welche räumliche Ausdehnung besitzen typischerweise LANs?}
 10 m – wenige km
 
 \minisec{Was versteht man unter einem Protokoll im Kontext der Datenkommunikation?}
@@ -162,7 +162,7 @@
         \item Beschäftigt sich damit, die zu übertragenden Daten so darzustellen, dass sie von vielen unterschiedlichen Systemen gehandhabt werden können
         \item Beispielsweise codieren manche Rechner einen String mit ASCII-Zeichen, andere benutzen Unicode, manche benutzen bei Integern das 1-, andere das 2-Komplement.
         Problematisch ist auch die Byteordnung des Prozessors (Big/Little-Endian)
-        \item Formal wird hier das verwendete Format beschrieben werden
+        \item Formal wird hier das verwendete Format beschrieben
         \begin{itemize}
             \item Anstatt für jede Anwendung eine eigene Übertragungssyntax und \-semantik zu definieren,
             stellt man hier eine allgemeingültige Lösung bereit
