--- a/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
@@ -189,7 +189,7 @@ Multi-Access-Netz (gemeinsames Medium)
     \begin{itemize}
         \item Signalauffrischung wie beim Repeater
         \item An einen Anschluss kann ein einzelner Rechner oder ein ganzer Bus angeschlossen werden
-        \item Multi-Access-Netz: der Hub gibt ein empfangenes Signal auf allen Anschlüssen wieder aus, praktisch wie ein "Bus" mit mehreren Anschlüssen:
+        \item Multi-Access-Netz: der Hub gibt ein empfangenes Signal auf allen Anschlüssen wieder aus, praktisch wie ein 'Bus' mit mehreren Anschlüssen:
         \item \textcolor{blue}{Gemeinsamer Übertragungskanal}, d.\ h. Stationen können nicht gleichzeitig senden und empfangen, nur eine Station auf einmal kann senden
         \item Geringe Sicherheit, da alle Stationen mithören können
     \end{itemize}
