--- a/src/content/mainmatter/vorlesungsfragen/vorlesung2.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung2.tex
@@ -14,7 +14,9 @@ Die Schichten untereinander und die Schicht 1 mit der Schicht 1
 Einen TCP Clienten
 
 \minisec{Warum haben Client- und Serversockets eine unterschiedliche Anzahl von Konstruktorparametern?}
-Der Clientsocket muss den Zielrechner und den eigenen Port mitgeben, um Daten senden und empfangen zu können, während der Serversocket nur den Port mitgeben muss umd Verbindungen zu akzeptieren.
+Der Clientsocket muss den Zielrechner und den eigenen Port mitgeben,
+um Daten senden und empfangen zu können, während der Serversocket nur den Port mitgeben muss,
+um Verbindungen zu akzeptieren.
 
 
 \minisec{Was bewirkt auf Serverseite der Aufruf von accept()?}
