--- a/src/content/mainmatter/vorlesungsfragen/vorlesung3.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung3.tex
@@ -118,7 +118,7 @@ Es wird der Weg ermittelt, welcher am genausten spezifiziert wird (most specific
     \item Der Longest Prefix Match Algorithmus erlaubt das Zusammenfassen von Routen
     \begin{itemize}
         \item Es reicht, wenn die genaue Adresse erst nahe am Ziel bekannt ist
-        \item Signifikante Beitrag zur Reduktion der Größe der Routing-Tabellen im Internet
+        \item Signifikanter Beitrag zur Reduktion der Größe der Routing-Tabellen im Internet
     \end{itemize}
     \item \textbf{Vorsicht:} Durch das Zusammenfassen von Routing-Einträgen dürfen keine fehlerhaften Regeln entstehen
     \begin{enumerate}
