--- a/src/content/mainmatter/vorlesungsfragen/vorlesung5.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung5.tex
@@ -23,7 +23,7 @@ Das Address Resolution Protocol (ARP) arbeitet auf der Schicht 2, der Sicherungs
     \item Probleme von RARP
     \begin{itemize}
         \item Ethernet-Broadcasts sind auf Subnetze beschränkt.
-        In einem LAN mit Subnetze braucht man mehrere RARP-Server
+        In einem LAN mit Subnetzen braucht man mehrere RARP-Server.
         \item Durch RARP erfährt ein Rechner nur seine IP-Adresse!
         Zu einer vollständigen Konfiguration einer Netzwerkschnittstelle gehören noch mindestens Netzmaske und Default-Gateway.
         \item DHCP hat RARP heute komplett abgelöst!
