Fixed some errors.

--- a/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
@@ -166,9 +166,8 @@ Multi-Access-Netz (gemeinsames Medium)
         \begin{itemize}
             \item Nachricht von Station A wird durch die zentrale Station an Station B weitergeleitet
             \item Punkt-zu-Punkt-Verbindungen (\textcolor{blue}{Switch}), oder Broadcast (\textcolor{blue}{Hub})
-            \item Verwundbarkeit durch zentralen
+            \item Verwundbarkeit durch zentralen Knoten (Redundanz möglich)
         \end{itemize}
-        \item Knoten (Redundanz möglich)
     \end{itemize}
 \end{itemize}
 
