--- a/src/content/mainmatter/vorlesungsfragen/vorlesung12.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung12.tex
@@ -82,7 +82,7 @@ Wie unterscheiden sich die Standards nach G.E. Thomas und IEEE 802.3?}
         \item \underline{Beispiel:} 10Base2
     \end{itemize}
     \includegraphics[width=\textwidth]{img/Manchester-Code}
-    \item \textcolor{blue}{1B/2B-:} ein Bit wird auf zwei Symbole kodiert
+    \item \textcolor{blue}{1B/2B:} ein Bit wird auf zwei Symbole kodiert
 \end{itemize}
 
 \minisec{Welche Vorteile hat ein 4B/5B Code gegenüber einem 1B/2B Code?}
@@ -96,7 +96,7 @@ Wie unterscheiden sich die Standards nach G.E. Thomas und IEEE 802.3?}
     \item \underline{Arbeitsweise:}
     \begin{itemize}
         \item Pegelwechsel bei 1, kein Pegelwechsel bei 0 (Differentieller NRZ-Code)
-        \item Kodierung von hexadezimalen Zeichen: 0, 1,\ldots, 9, A, B,\ldots, F (4 Bit)
+        \item Kodierung von hexadezimalen Zeichen: 0, 1, \ldots, 9, A, B, \ldots, F (4 Bit)
         in 5 Bit, sodass lange Nullenblöcke vermieden werden.
         \item Auswahl der günstigsten 16 der möglichen 32 Codewörter
         (maximal 3 Nullen in Folge)
@@ -160,7 +160,7 @@ Welche Frequenzbänder werden benutzt?}
 \begin{itemize}
     \item Datenraten:
     \begin{itemize}
-        \item 1, 2, 5.5, 11, 6, 9, 12, 18, 24, 36, 48, 54, \ldots MBit/s Bruttodatenrate
+        \item 1, 2, 5.5, 11, 6, 9, 12, 18, 24, 36, 48, 54, \ldots $\frac{MBit}{s}$ Bruttodatenrate
         \item Abhängig von Signalqualität wird die bestmögliche Datenrate gewählt
         \item Nutzdatenrate wenig mehr als die Hälfte der jeweiligen Bruttodatenrate
     \end{itemize}
